# pycohortflow

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  2025_05_04_paper.md  2026_05_04_paper_revised.md  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  pytest-output.txt
.github/workflows/: ci.yml  docs.yml
docs/: api.rst  api_cfd.rst  api_cfd_util.rst  conf.py  customise.rst  development.rst  documentation.rst  generator.rst  getting_started.rst  index.rst  roadmap.rst
docs/_static/: custom.css
docs/_static/js/: cohortflow.js  config.js  exporter.js  toml-parser.js
docs/_static/styles/: default_style_colorful.toml  default_style_white.toml
examples/: 2026_02_12_example_cfd.ipynb  example_cfd.ipynb
paper/: LICENCE.md  paper.bib  paper.md  patch-extension.sh
scripts/: sync_roadmap.py
src/pycohortflow/: __init__.py  cfd.py  cfd_util.py  export.py
src/pycohortflow/styles/: __init__.py  default_style_colorful.toml  default_style_minimal.toml
tests/: test_cfd.py  test_cfd_util.py  test_export.py  test_roadmap_sync.py
