[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycohortflow"
version = "0.1.1"
description = "Lightweight Cohort Flow Diagrams built on Matplotlib."
readme = "README.md"
license-expression = "AGPL-3.0-only"
license-files = ["LICENSE*"]
requires-python = ">=3.9"
authors = [
    { name="FSchwarz" },
]
keywords = ["cohort", "flow diagram", "matplotlib", "clinical", "consort"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "matplotlib>=3.5",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "build",
    "twine",
]
docs = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.15",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-copybutton>=0.5",
]

[project.urls]
Homepage = "https://github.com/fschwar4/pycohortflow"
Documentation = "https://fschwar4.github.io/pycohortflow/"
Repository = "https://github.com/fschwar4/pycohortflow"
Issues = "https://github.com/fschwar4/pycohortflow/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pycohortflow.styles" = ["*.toml"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D"]
ignore = ["D100", "D104"]

[tool.pytest.ini_options]
testpaths = ["tests"]
