[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycohortflow"
version = "0.1.3"
description = "Lightweight Cohort Flow Diagrams built on Matplotlib — with an interactive browser-based generator."
readme = "README.md"
license = "EUPL-1.2"
license-files = ["LICENSE*"]
requires-python = ">=3.9"
authors = [
    { name="FSchwarz" },
]
keywords = [
    "cohort",
    "cohort flow diagram",
    "flow diagram",
    "flowchart",
    "matplotlib",
    "clinical research",
    "clinical trial",
    "randomised controlled trial",
    "RCT",
    "consort",
    "prisma",
    "prisma 2020",
    "systematic review",
    "meta-analysis",
    "epidemiology",
    "reporting standards",
    "reproducibility",
    "reproducible research",
    "participant flow",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "matplotlib>=3.5",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "nbmake>=1.5",
    "ipykernel>=6.0",
    "ruff>=0.4",
    "build",
    "twine",
]
docs = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.15",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-copybutton>=0.5",
]

[project.urls]
Homepage = "https://github.com/fschwar4/pycohortflow"
Documentation = "https://fschwar4.github.io/pycohortflow/"
Repository = "https://github.com/fschwar4/pycohortflow"
Issues = "https://github.com/fschwar4/pycohortflow/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pycohortflow.styles" = ["*.toml"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D"]
ignore = ["D100", "D104"]

[tool.pytest.ini_options]
# Unit tests live under tests/. The example notebook lives under
# examples/ and is collected by `nbmake` when explicitly invoked as
# `pytest --nbmake` (nbmake is installed via the `dev` extras and
# silently ignores .ipynb files when its flag is absent).
#
# We deliberately keep `--nbmake` OUT of addopts so plain `pytest`
# works in environments without nbmake installed; running unit tests
# should never depend on the notebook stack.
testpaths = ["tests", "examples"]
